Refactor SimTale logic, improve code quality, and clean up event handling.
- Refactor `InteractionManager` and `SimTaleEventHandler` to remove redundant null checks, unnecessary casts, and improve contextual responses.
- Update `SimTale` plugin initialization to register event handlers and commands more cleanly.
- Improve UI page handling in `SimDebugPage`, `NPCInteractionPage`, and `TestPage` using `BuilderCodec` and `NonNullDecl`.
- Convert `LootEntry` to a Java record and optimize list operations in `MagicEngine` and `PrefabManager` using modern Java APIs.
- Fix potential null pointer issues in `SimTaleCommand` and `SimNPCFactory` via assertions and better component access.
- Cleanup unused imports, constants, and fields across several core classes.